find -type f -name '*.sh' -exec sed -i 's/--add-modules/--addmods/g' {} +