@@ -36,13 +36,13 @@ echo
 # Instead of running the compiled test code directly (which we could do), we're running it as a patch to the original code.
 if [[ "$OSTYPE" == "cygwin" ]] || [[ "$OSTYPE" == "msys" ]] ; then
     java --modulepath "mods/main;lib" \
-         --add-modules com.greetings \
+         --addmods com.greetings \
          --patch-module com.greetings=mods/test/com.greetings \
          -m junit/org.junit.runner.JUnitCore \
         com.greetings.GreetTest
 else
     java --modulepath mods/main:lib \
-         --add-modules com.greetings \
+         --addmods com.greetings \
          --patch-module com.greetings=mods/test/com.greetings \
          -m junit/org.junit.runner.JUnitCore \
         com.greetings.GreetTest
