@@ -15,11 +15,11 @@ echo "${info} *** Create an executable version of the com.greetings module *** $
 if [[ "$OSTYPE" == "cygwin" ]] || [[ "$OSTYPE" == "msys" ]] ; then
     # Windows users: please not that if the below fails due to JAVA_HOME substitution, please hard-code the JAVA_HOME path into the script
     jlink --modulepath "${JAVA_HOME}\jmods;mlib" \
-          --add-modules com.greetings \
+          --addmods com.greetings \
           --output executable
 else
     jlink --modulepath "${JAVA_HOME}"/jmods:mlib \
-          --add-modules com.greetings \
+          --addmods com.greetings \
           --output executable
 fi
 
